Fixing menu icon color on mobile

--- a/src/styles/components/mobile-menu.scss
+++ b/src/styles/components/mobile-menu.scss
@@ -113,6 +113,10 @@ nav.mobile-menu__inner {
     font-size: 1.1em;
 
   }
+  &.mobile-icon {
+    color: var(--header-text);
+  }
+
 }
 
 @mixin mobileNavStyle() {
